# JobFinder

./: .gitignore  BUGFIX_LOG.md  CHANGELOG.md  INTERVIEW_DEMO.md  LICENSE  README.es.md  README.md  README.zh.md  pyproject.toml
jobfinder/: __init__.py  agent.py  assessment.py  cache.py  cli.py  company_lookup.py  cv_extractor.py  cv_reader.py  dedup_check.py  display.py  filters.py  llm_backend.py  logger.py  model_fetcher.py  pipeline_stats.py  schemas.py  scraper_jobspy.py  scrapers_jobspy.py  scraping.py  server.py  telemetry.py  title_discovery.py  tools.py
jobfinder/templates/: index.html
jobradar/: __init__.py  agent.py  assessment.py  cache.py  cli.py  cv_extractor.py  cv_reader.py  dedup_check.py  display.py  llm_backend.py  logger.py  model_fetcher.py  schemas.py  scraping.py  server.py  telemetry.py  title_discovery.py  tools.py
jobradar/templates/: index.html
scripts/: fetch_openrouter_models.py  seed_demo_data.py  verify_dedup.py
tests/fixtures/: test_cv.md
